# mcp-immobilier-dvf

./: Dockerfile  LICENSE  LISTING.md  PUBLISH.md  README.md  dvf_core.py  mcpize.yaml  pyproject.toml  requirements.txt  server.py  smithery.yaml  smoke_test.py  test_dvf_core.py
