[project]
name = "mcp-immobilier-dvf"
version = "1.0.0"
description = "Serveur MCP : prix et transactions immobilières en France à partir des données ouvertes DVF (Etalab)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentIA" }]
keywords = ["mcp", "immobilier", "dvf", "real-estate", "france", "open-data"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "dvf_core.py"]
